--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "private": false,
   "devDependencies": {
     "@webpack-cli/generators": "^2.3.0",
+    "browser-sync": "^2.27.10",
+    "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.3.2",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
-    "browser-sync": "^2.27.10"
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
     "browser-sync-webpack-plugin": "^2.3.0",
